--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
-    "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "start": "docker-compose up --build"
   },
   "dependencies": {
     "react": "19.1.0",
