--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,14 @@
 services:
+
+  redis-stack:
+    image: redis/redis-stack:latest
+    container_name: cache-handler-redis
+    ports:
+      - "6379:6379"
+      - "8001:8001"
+    networks:
+      - app-network
+
   nextjs-app:
     build:
       context: .
@@ -8,6 +18,9 @@ services:
     environment:
       - NODE_ENV=production
       - NEXT_TELEMETRY_DISABLED=1
+      - REDIS_URL=redis://redis-stack:6379
+      - REDIS_SINGLE_CONNECTION=true
+      - NEXT_PRIVATE_DEBUG_CACHE=true
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3000"]
