--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "lint": "eslint",
-    "start": "docker-compose up --build"
+    "start": "docker-compose up --build",
+    "mock-api:start": "MOCK_API_URL=http://localhost:3001 node mocks/server.mjs"
   },
   "dependencies": {
     "@fortedigital/nextjs-cache-handler": "^2.0.2",
+    "express": "^5.1.0",
+    "morgan": "^1.10.1",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
