--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build --turbopack",
     "lint": "eslint",
     "start": "docker-compose up --build",
-    "mock-api:start": "MOCK_API_URL=http://localhost:3001 node mocks/server.mjs"
+    "mock-api:start": "MOCK_API_URL=http://localhost:3001 node mocks/server.mjs",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@fortedigital/nextjs-cache-handler": "^2.0.2",
