--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "wireit",
-    "build": "next build --turbopack",
+    "build": "next build",
     "lint": "eslint",
     "start": "docker-compose up --build",
     "api-mocks": "wireit",
@@ -39,7 +39,7 @@
     "@fortedigital/nextjs-cache-handler": "2.1.0",
     "express": "^5.1.0",
     "morgan": "^1.10.1",
-    "next": "15.5.4",
+    "next": "15.4.7",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "redis": "^5.8.2"
@@ -51,7 +51,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.5.4",
+    "eslint-config-next": "15.4.7",
     "tailwindcss": "^4",
     "typescript": "^5",
     "wireit": "^0.14.12"
