same issue as downgrading to next 15.4.7

--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@fortedigital/nextjs-cache-handler": "2.1.0",
     "express": "^5.1.0",
     "morgan": "^1.10.1",
-    "next": "15.5.4",
+    "next": "15.6.0-canary.54",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "redis": "^5.8.2"
@@ -55,5 +55,17 @@
     "tailwindcss": "^4",
     "typescript": "^5",
     "wireit": "^0.14.12"
+  },
+  "overrides": {
+    "@fortedigital/nextjs-cache-handler": {
+      "next": "$next"
+    }
+  },
+  "peerDependenciesMeta": {
+    "@fortedigital/nextjs-cache-handler": {
+      "next": {
+        "optional": true
+      }
+    }
   }
 }
